--- a/fullstack-portfolio/frontend-react/src/components/Navbar/Navbar.scss
+++ b/fullstack-portfolio/frontend-react/src/components/Navbar/Navbar.scss
@@ -1,10 +1,13 @@
 .app__navbar {
   width: 100%;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   padding: 1rem 2rem;
   background: rgba(255, 255, 255, 0.25);
+
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -33,37 +36,45 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   list-style: none;
 
   li {
     margin: 0 1rem;
     cursor: pointer;
+
     flex-direction: column;
 
     div {
-      width: 5px;
-      height: 5px;
+      width: 30px;
+      height: 1px;
       background: transparent;
-      border-radius: 50%;
       margin-bottom: 5px;
+      transition: all 1s ease-in-out;
     }
 
     a {
       color: var(--gray-color);
       text-decoration: none;
       flex-direction: column;
+      padding: 0 10px;
+      border-radius: 10px;
+      border: 1px solid transparent;
+
       text-transform: uppercase;
       font-weight: 500;
-      transition: all 0.3s ease-in-out;
+
+      transition: all 1s ease-in-out;
 
       &:hover {
         color: var(--secondary-color);
+        border: 1px solid #ccc;
       }
     }
 
     &:hover {
       div {
-        background: var(--secondary-color);
+        background: var(--gray-color);
       }
     }
   }
