--- a/fullstack-portfolio/frontend-react/src/container/Header/Header.scss
+++ b/fullstack-portfolio/frontend-react/src/container/Header/Header.scss
@@ -14,8 +14,25 @@
   }
 }
 
-.head-text {
+.header-text {
   font-family: "Herr Von Muellerhoff", cursive;
+  font-size: 2.75rem;
+  font-weight: 800;
+  text-align: center;
+  color: var(--black-color);
+  text-transform: capitalize;
+
+  span {
+    color: var(--secondary-color);
+  }
+
+  @media screen and (min-width: 2000px) {
+    font-size: 4rem;
+  }
+
+  @media screen and (max-width: 450px) {
+    font-size: 2rem;
+  }
 }
 
 .app__header {
